[project]
name = "slipinformation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chrome-lens-py>=2.1.3",
    "fastapi>=0.135.2",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.22",
    "pyzbar>=0.1.9",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
